; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_ewah_bitmap.c_ewah_clear.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_ewah_bitmap.c_ewah_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ewah_bitmap = type { i32, i64*, i64*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ewah_bitmap*)* @ewah_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ewah_clear(%struct.ewah_bitmap* %0) #0 {
  %2 = alloca %struct.ewah_bitmap*, align 8
  store %struct.ewah_bitmap* %0, %struct.ewah_bitmap** %2, align 8
  %3 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %2, align 8
  %4 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %3, i32 0, i32 0
  store i32 1, i32* %4, align 8
  %5 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %2, align 8
  %6 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %5, i32 0, i32 1
  %7 = load i64*, i64** %6, align 8
  %8 = getelementptr inbounds i64, i64* %7, i64 0
  store i64 0, i64* %8, align 8
  %9 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %2, align 8
  %10 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %9, i32 0, i32 3
  store i64 0, i64* %10, align 8
  %11 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %2, align 8
  %12 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %11, i32 0, i32 1
  %13 = load i64*, i64** %12, align 8
  %14 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %2, align 8
  %15 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %14, i32 0, i32 2
  store i64* %13, i64** %15, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
